--- a/index.html
+++ b/index.html
@@ -7,11 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Honda Cbr BOOT</title>
     <!-- bootstrap cdn link css  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- custom or plain or vanila css  -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- google font poppins -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-
+    <header class="bg-color-header pt-5">
+        <section class="container">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-md-6 col-12">
+                    <p class="text-white p-font-size">
+                        Computer-controlled digital transistorized with electronic advance
+                    </p>
+                    <h1 class="fw-bolder text-white h1-font-size">
+                        Honda CBR 300R
+                    </h1>
+                    <p class="text-white p-font-size mt-3 mb-4">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat
+                        duis
+                        enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                    <button class="btn-orange text-white fs-6 mb-4">Purchase</button>
+                </div>
+                <div class="col-md-6 col-12">
+                    <img class="img-fluid" src="images/header-bike.png" alt="">
+                </div>
+            </div>
+            </div>
+        </section>
+    </header>
 </body>
 
 </html>
