--- a/index.html
+++ b/index.html
@@ -38,7 +38,34 @@
                         duis
                         enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </p>
-                    <button class="btn-orange text-white fs-6 mb-4">Purchase</button>
+
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn-orange text-white fs-6 mb-4" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Purchase
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Are you interested?</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Do you want to buy a HONDA CBR?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NO</button>
+                                    <button type="button" class="btn btn-orange" data-bs-dismiss="modal">Yes
+                                        Proceed!</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 col-12">
                     <img class="img-fluid" src="images/header-bike.png" alt="">
@@ -47,6 +74,12 @@
             </div>
         </section>
     </header>
+
+
+    <!-- bootstrap js cdn file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
