--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <body>
     <header class="bg-color-header pt-5">
         <section class="container">
+            <!-- container start -->
             <div class="row d-flex justify-content-center align-items-center">
+
                 <div class="col-md-6 col-12">
                     <p class="text-white p-font-size">
                         Computer-controlled digital transistorized with electronic advance
@@ -67,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-12">
+                <div class="col-md-6 col-12 mb-5">
                     <img class="img-fluid" src="images/header-bike.png" alt="">
                 </div>
             </div>
@@ -75,6 +77,36 @@
         </section>
     </header>
 
+    <!-- main -->
+
+    <main>
+        <!-- featured bike section -->
+        <section class="container mt-5">
+            <div class="text-center pb-5">
+                <h1 class="h1-font-size text-dark">Fetured Bikes 2021</h1>
+                <p class="p-color-size mb-5">Best bike collection</p>
+            </div>
+            <!-- gray scale images -->
+            <div class="row d-flex flex-row gy-5">
+                <div class="col-md-4 col-12">
+                    <div class="col-md-11 col-12">
+                        <img class="img-fluid grayscale" src="images/feature-bike.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <div class="col-md-11 col-12">
+                        <img class="img-fluid" src="images/feature-bike.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4 col-12">
+                    <div class="col-md-11 col-12">
+                        <img class="img-fluid grayscale" src="images/feature-bike.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
     <!-- bootstrap js cdn file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
