--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/991a6b03a4.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -104,6 +107,111 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- happy clients says -->
+        <section class="container">
+            <div class="text-center my-5">
+                <h1 class="h1-font-size pt-5">Happy <span class="orange">
+                        Clients says
+                    </span>
+                </h1>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
+                <div class="col">
+                    <div class="card">
+                        <div class="m-4">
+                            <div class="m-3 d-flex justify-content-center">
+                                <img src="images/user-1.png" class="card-img-top" style="height: 149px;width: 149px;"
+                                    alt="...">
+                            </div>
+
+                            <div class="card-body">
+
+                                <p class="card-text text-center">Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+
+                            </div>
+                            <div class="text-center">
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="far fa-star star-blank"></i>
+                            </div>
+                            <div class="text-center mt-3 ">
+                                <p class="p-font-size fw-bolder text-primary">Regina Miles</p>
+                                <p class="fw-bolder">Banker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="m-4">
+                            <div class="m-3 d-flex justify-content-center">
+                                <img src="images/user-2.png" class="card-img-top" style="height: 149px;width: 149px;"
+                                    alt="...">
+                            </div>
+
+                            <div class="card-body">
+
+                                <p class="card-text text-center">Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+
+                            </div>
+                            <div class="text-center">
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="far fa-star star-blank"></i>
+                            </div>
+                            <div class="text-center mt-3 ">
+                                <p class="p-font-size fw-bolder text-primary">Regina Miles</p>
+                                <p class="fw-bolder">Banker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <div class="m-4">
+                            <div class="m-3 d-flex justify-content-center">
+                                <img src="images/user-3.jpg" class="card-img-top rounded-circle"
+                                    style="height: 149px;width: 149px;" alt="...">
+                            </div>
+
+                            <div class="card-body">
+
+                                <p class="card-text text-center">Slate helps you see how
+                                    many more days you need
+                                    to work to reach your financial
+                                    goal for the month and year.</p>
+
+                            </div>
+                            <div class="text-center">
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="fas fa-star star-color"></i>
+                                <i class="far fa-star star-blank"></i>
+                            </div>
+                            <div class="text-center mt-3 ">
+                                <p class="p-font-size fw-bolder text-primary">Regina Miles</p>
+                                <p class="fw-bolder">Banker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
 
     </main>
