--- a/index.html
+++ b/index.html
@@ -303,6 +303,26 @@
             </div>
         </section>
 
+        <!-- bonus section  -->
+
+        <section class="bg-color-header my-5">
+            <div class="container py-5">
+                <div class=" col-md-8 col-12 mb-3">
+                    <label for="exampleFormControlInput1" class="form-label fs-1">Enter your
+                        Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="col-md-8 col-12 mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label fs-1">Send Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div>
+                    <button class="btn-orange ">SUBMIT!</button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- bootstrap js cdn file -->
