--- a/index.html
+++ b/index.html
@@ -323,6 +323,17 @@
             </div>
         </section>
 
+        <!-- bonus section two -->
+        <section class="container">
+            <h1 class="h1-font-size text-center">Honda CBR 300R Review</h1>
+            <div class="d-flex justify-content-center">
+                <iframe class="w-100 mb-5" height="500" src="https://www.youtube.com/embed/7HuiufMjFp4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </section>
+
     </main>
 
     <!-- bootstrap js cdn file -->
