--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- featured bike section -->
         <section class="container mt-5">
             <div class="text-center pb-5">
-                <h1 class="h1-font-size text-dark">Fetured Bikes 2021</h1>
+                <h1 class="h1-font-size text-dark">Featured Bikes 2021</h1>
                 <p class="p-color-size mb-5">Best bike collection</p>
             </div>
             <!-- gray scale images -->
@@ -333,7 +333,7 @@
                     allowfullscreen></iframe>
             </div>
         </section>
-
+        <!-- main end -->
     </main>
 
     <!-- bootstrap js cdn file -->
